--- a/NameSearch/views/layout.erb
+++ b/NameSearch/views/layout.erb
@@ -14,33 +14,15 @@
   <title>Name Surfer</title>
 </head>
 <body>
-<input id ="input" type="text" name="word">
-<ul id="results">
-
-</ul>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script>
 
 </script>
 <header>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">Name Surfer</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-      </div>
-    </div>
-  </nav>
-
-
-
-
+  <div class="jumbotron">
+    <h1>Name Surfer</h1>
+    <p>Check the database for the popularity of baby names from 1900 - 2000!</p>
+  </div>
 
   <section>
     <%= yield %>
