--- a/NameSearch/views/home.erb
+++ b/NameSearch/views/home.erb
@@ -3,34 +3,69 @@
 
     google.charts.load('current', {packages: ['corechart', 'line']});
     google.charts.setOnLoadCallback(drawBasic);
+    let thearray = [['1900'], ['1910'], ['1920'], ['1930'], ['1940'], ['1950'], ['1960'], ['1970'], ['1980'], ['1990'], ['2000']]
+    let options = {
+        animation: {
+            duration: 1000,
+            easing: 'out'
+        },
+        hAxis: {
+            title: 'Year',
+            //ticks: [1900,1910,1920,1930,1940,1950,1960,1970,1980,1990,2000]
+        },
+        vAxis: {
+            title: 'Rank',
+            direction: -1,
+            ticks: [200, 400, 600, 800,1000]
 
+        },
+        height: 400
+    };
     function drawBasic(name = null, array = null) {
-        if (!name)
-            name = 'Name'
 
-        data = new google.visualization.DataTable();
-        data.addColumn('string', 'Year');
-        data.addColumn('number', name);
-        if (array)
-            data.addRows(array);
+        if (!name) {
+            data = new google.visualization.DataTable();
+            chart = new google.visualization.LineChart(document.getElementById('chart_div'));
 
+        }
 
-        let options = {
-            hAxis: {
-                title: 'Year'
-            },
-            vAxis: {
-                title: 'Rank',
-                direction: -1,
-                ticks: [200, 400, 600, 800,1000]
-
+        if (array) {
+            for (let i = 0; i < 11; ++i) {
+                thearray[i].push(array[i][1]);
             }
-        };
+            data.addColumn('number', name);
+            data.removeRows(0,data.getNumberOfRows())
+            data.addRows(thearray);
+            chart.draw(data, options);
 
-        let chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-
-        chart.draw(data, options);
+        } else {
+            data.addColumn('string', 'Year');
+        }
     }
+
+    function hold() {
+        if (!name) {
+            data = new google.visualization.DataTable();
+            chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+
+        }
+
+        if (array) {
+            for (let i = 0; i < 11; ++i) {
+                thearray[i].push(array[i][1]);
+            }
+            data.addColumn('number', name);
+            for (let i=0; i < data.getNumberOfRows(); ++i) {
+                data.setValue(i, data.getNumberOfColumns()-1, array[i][1]);
+            }
+            console.log(data);
+            chart.draw(data, options);
+
+        } else {
+            data.addColumn('string', 'Year');
+        }
+    }
+
 </script>
 
 <script>
@@ -44,9 +79,11 @@
                 .done((data) => {
                     if (data == null)
                         $(alert('Name not found in database.'));
-                    $(console.log(data));
-                    $('#results').prepend('<li>' + data + '</li>');
-                    $(drawBasic(text,data));
+                    else {
+                        $(console.log(data));
+                        $('#results').prepend('<li>' + data + '</li>');
+                        $(drawBasic(text,data));
+                    }
                     $('#input').val('');   // reset the textbox
                 })
                 .fail((xhr) => {
